--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -2,6 +2,7 @@
 /* This could be colors, fonts, or padding sizes! */
 
 :root {
+  --nav-color: #FFBFB1;
   --color-primary: #ebbda0;
   --color-secondary: rgba(235, 189, 160, 0.3);
   --text-prinary: #0a3641;
