--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -73,15 +73,21 @@ body {
   align-items: center;
  }
 
+ .nav {
+  padding-bottom: 3.5rem;
+ }
+
  .nav__list {
   gap: 30px;
  }
 
  .nav__link {
   font-weight: 700;
+  color: var(--nav-color);
  }
 
  .icons {
+  padding-bottom: 3.5rem;
   gap: 10px;
  }
 
