features section added

--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -5,8 +5,8 @@
   --nav-color: #FFBFB1;
   --color-primary: #ebbda0;
   --color-secondary: rgba(235, 189, 160, 0.3);
-  --text-prinary: #0a3641;
-  --text-secondary: #fff;
+  --text-primary: #0a3641;
+  --text-secondary: #357787;
   --button-text-color: #0a3641;
   --button-color: #ebbda0;
 }
