--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,8 @@
 html {
   box-sizing: border-box;
   font-family: 'Roboto Slab', serif;
+  font-size: 20px;
+  background-color: #F9EBE3;
 }
 *,
 *::before,
@@ -24,6 +26,10 @@ html {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h2, p {
+  margin: 0;
 }
 
 img {
@@ -55,10 +61,15 @@ body {
 }
 
 .container {
-  max-width: 1800px;
-  padding: 0 15px;
+  max-width: 1440px;
+  padding: 0 10px;
   margin: 0 auto;
 }
+
+section {
+  margin-bottom: 4rem;
+}
+
  /* header */
 
  .header {
@@ -73,8 +84,8 @@ body {
   align-items: center;
  }
 
- .nav {
-  padding-bottom: 3.5rem;
+ .header__logo {
+  height: 120px;
  }
 
  .nav__list {
@@ -87,7 +98,6 @@ body {
  }
 
  .icons {
-  padding-bottom: 3.5rem;
   gap: 10px;
  }
 
@@ -97,4 +107,37 @@ body {
   width: 100%;
   object-fit: cover;
   object-position: center;
+}
+
+/* features */
+
+.wrapper {
+  justify-content: space-evenly;
+}
+
+.card {
+  flex-direction: column;
+  gap: 0.7rem;
+  align-items: center;
+  width: 300px;
+  padding: 39px 30px;
+  background-color: #fff;
+  border-radius: 1rem;
+}
+
+.card__ellipse {
+  border-radius: 50%;
+  padding: 20px;
+  background-color: rgba(235, 189, 160, 0.50);;
+}
+
+.card__title {
+  font-size: 1rem;
+  color: var(--text-primary);
+}
+
+.card__desc {
+  font-size: 0.8rem;
+  text-align: center;
+  color: var(--text-secondary);
 }
