--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -197,4 +197,10 @@ section {
   width: 100%;
 }
 
+.slide-text {
+  color: var(--text-primary);
+  text-align: center;
+  line-height: 1.5rem;
+}
+
 
