--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,7 @@ html {
   font-family: 'Roboto Slab', serif;
   font-size: 20px;
   background-color: #F9EBE3;
+  scroll-behavior: smooth;
 }
 *,
 *::before,
@@ -529,10 +530,19 @@ input[type="checkbox"] {
   line-height: 2rem;
 }
 
+.item-3-desc span {
+  font-size: 30px;
+  font-weight: 600;
+}
+
 .item-3-info {
   margin-bottom: 20px;
   flex-direction: column;
   gap: 20px;
+}
+
+.item-3-info > .stars-rating {
+  align-self: flex-start;
 }
 
 .item-3-review {
@@ -815,5 +825,166 @@ input[type="checkbox"] {
   padding: 12px 0;
   border: 1px solid #0A3641;
   border-radius: 20px;
+}
+
+/* review popup */
+
+.popup {
+  width: 800px;
+  position: fixed;
+  top: 50%;    
+  left: 50%;     
+  transform: translate(-50%, -50%); 
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+}
+
+.popup-title {
+  padding: 12px 0 12px 30px;
+  background-color: var(--color-primary);
+  margin-bottom: 15px;
+}
+
+.popup-content {
+  flex-direction: column;
+  padding: 0 30px 50px 30px;
+  gap: 30px;
+}
+
+.popup-content img {
+  max-width: 120px;
+  align-self: flex-start;
+  border: 1px solid rgba(10, 54, 65, 0.50);
+  border-radius: 10px;
+}
+
+.popup-top {
+  gap: 30px;
+}
+
+.popup-desc {
+  font-size: 15px;
+}
+
+.popup-desc {
+  color: rgba(10, 54, 65, 0.60);
+  line-height: 150%;
+}
+
+.popup-desc span {
+  color: var(--text-primary);
+  font-weight: 600;
+}
+
+.quality {
+  gap: 10px;
+  align-items: center;
+  align-self: flex-start;
+}
+
+.quality span {
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.stars-rating {
+  flex-direction: row-reverse;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.stars-rating label,
+.stars-rating span {
+  align-self: flex-start;
+}
+
+.stars-rating label {
+  cursor: pointer;
+}
+
+.stars-rating input[type="radio"] {
+ display: none;
+}
+
+.stars-rating input[type="radio"]:not(:checked) ~ label:hover > svg,
+.stars-rating input[type="radio"]:not(:checked) ~ label:hover ~ label > svg {
+  fill: #FBBC04;
+}
+
+.stars-rating input[type="radio"]:checked ~ label > svg {
+  fill: #FBBC04;
+}
+
+.popup-content form {
+  position: relative;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.popup-content form > label {
+  font-size: 15px;
+}
+
+.popup-content form input[type="text"] {
+  width: 40%;
+  padding: 10px;
+  height: 50px;
+  border-radius: 10px;
+  border: 1px solid rgba(10, 54, 65, 0.50);
+  font-size: 15px;
+}
+
+.popup-content form textarea {
+  resize: none;
+  padding: 10px;
+  width: 60%;
+  height: 95px;
+  border-radius: 10px;
+  border: 1px solid rgba(10, 54, 65, 0.50);
+  font-size: 15px;
+}
+
+.popup-content form input[type="submit"] {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 85px;
+  height: 45px;
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+  border: 1px solid rgba(10, 54, 65, 0.50);
+  cursor: pointer;
+}
+
+
+.closePopup {
+  position: absolute;
+  top: 5px;
+  right: 20px;
+  background: none;
+  border: none;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.closePopup::before,
+.closePopup::after {
+  content: '';
+  position: absolute;
+  width: 5px;
+  height: 20px;
+  background: #000;
+}
+
+.closePopup::before {
+  transform: rotate(45deg);
+}
+
+.closePopup::after {
+  transform: rotate(-45deg);
 }
 
