--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -208,14 +208,14 @@
   color: var(--text-secondary);
 }
 
-.form {
+.news__form {
   width: 50%;
   flex-direction: column;
   align-items: center;
   gap: 40px;
 }
 
-input[type="email"] {
+.news__form input[type="email"] {
   width: 60%;
   padding: 15px;
   border-radius: 30px;
