--- a/src/css/media.css
+++ b/src/css/media.css
@@ -74,6 +74,10 @@
         width: 100px;
     }
 
+    .right {
+        gap: 25px;
+    }
+
     .icon svg {
         width: 30px;
         height: 30px;
@@ -82,6 +86,7 @@
     .social__list {
         gap: 5px;
     }
+
 
     /* jacket html */
 
@@ -346,6 +351,11 @@
 
 @media (max-width: 768px) {
 
+    .grid-container {
+        display: flex;
+        flex-direction: column;
+    }
+
     .grid__item img {
         aspect-ratio: 1 / 0.4;
     }
@@ -353,6 +363,16 @@
     .news__form input[type="email"],
     .news__form .form__btn {
         width: 100%;
+    }
+
+    .news__title {
+        font-size: 1rem;
+    }
+
+    .news__desc,
+    .check label,
+    .form__btn {
+        font-size: 12px;
     }
 
     /* jacket html */
@@ -436,7 +456,7 @@
 
     .slide-text {
         font-size: 12px;
-        line-height: 1rem;
+        line-height: 0.8rem;
     }
 
     .item__content,
@@ -460,7 +480,7 @@
         font-size: 12px;
         padding: 5px 10px;
         border-radius: 5px;
-    }  
+    }
 
     .news__content {
         padding: 20px;
