--- a/src/css/about.css
+++ b/src/css/about.css
@@ -6,7 +6,8 @@
 }
 
 .handcraft__wrapper {
-    padding: 134px 300px 80px 300px;
+    min-height: 500px;
+    padding: 40px;
     background-image: url("/assets/images/handcraft-image.jpg");
     background-repeat: no-repeat;
     background-position: center;
@@ -16,6 +17,7 @@
 .wrap {
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .handcraft__title {
@@ -36,24 +38,24 @@
 
 .readMore,
 .purchaseNow {
-    width: 30%;
-    min-width: 280px;
+    width: 50%;
+    max-width: 310px;
     padding: 13px;
     border-radius: 20px;
     border: 1px solid #0A3641;
     background-color: #fff;
 }
 
-.purchaseNow {
-    width: 20%;
-    max-width: 311px;
-}
-
-.designers__title {
+.designers__title,
+.team__title  {
     margin-bottom: 25px;
     max-width: 850px;
     font-size: 40px;
     font-weight: 800;
+}
+
+.team__title {
+    max-width: 100%;
 }
 
 .designers__desc {
@@ -77,29 +79,27 @@
     transform: scale(1.1);
 }
 
-.team__title {
-    margin-bottom: 80px;
-    font-size: 40px;
-    font-weight: 800;
-}
 
 .team__list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(700px, 1fr));
-    gap: 100px;
+    grid-template-columns: 1fr 1fr;
+    gap: 50px;
+    place-content: center;
 }
 
 .team__item {
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
     align-items: center;
 }
 
 .team__info {
     max-width: 380px;
-    text-align: left;
+    text-align: center;
 }
 
 .member__social-list {
+    justify-content: center;
     gap: 25px;
 }
 
