--- a/src/css/media.css
+++ b/src/css/media.css
@@ -291,6 +291,16 @@
     .related__wrapper {
         margin-bottom: 50px;
     }
+
+    /* contacts */
+
+    .map {
+        min-width: 100%;
+    }
+
+    .contacts__form {
+        min-width: 50%;
+    }
 }
 
 @media (max-width: 990px) {
@@ -489,6 +499,11 @@
         font-size: 12px;
     }
 
+    /* contacts */
+
+    .contacts__desc {
+        font-size: 12px;
+    }
 }
 
 @media (max-width: 450px) {
